Syndicati - Core Upgrade
Changelog:

-Core Features Upgrades to JDK/JavaFX 25
-Performance & Optimizations
-Login Refinements